== Released [attachment:wiki:SoftwareReleases:eLife-1.6a5.zip V1.6a5] ==

This release requires a new library set. Also download eLife-libs-1.6a5.zip

''' Jetty '''

Upraded Jetty to 6b17.
Initial jetty implementation; to retrieve a list of XML messages since the last request submit a get request to /webclient/update.
To post a new value sumbit a post request with MESSAGE="message string" to /webclient/update 
An username/password is required to access the update servlet, for the moment test using plain/plain.
The jetty server must be switched on in the bootstrap.xml file
For testing it may be useful to place a small HTML file in the www directory of the server. This will be served as the index file
(http://127.0.0.1:8081/)

{{{
<html>
  <head>
    <title>test page</title>
  </head>
  <body>
  <p>A test page for the update servlet.
  
  <FORM ACTION="http://127.0.0.1:8081/webclient/update" METHOD="POST" >
  <INPUT NAME="MESSAGE" SIZE="80"  VALUE='<CONTROL KEY="GARAGE_LIGHT" COMMAND="on" />'/>
  <P>
  <INPUT TYPE="SUBMIT" />
  </FORM>
  
  </body>
</html>
}}}

''' Config '''

It is now possible to specify keys in decimal rather than hex.Include the following parameter in the device block.

{{{
   <ITEM NAME="DECIMAL_KEYS" VALUE="Y" />
}}}


''' General '''

Refactoring accross most of the system to help simplify model building.
Many support methods added to simplify model building.

    General catalogue support
    	configHelper.addParameterBlock 
    	configHelper.getCatalogueValue
    	findKeyForParameterValue
    	finishedReadParameters (A hook which occurs after the configuration parser has read the to level parameters 
    	    but has not yet begun the individual device entries.)
    	
    Key formatting 
        FormatKey  (called automatically as the configuration file is read, formatting is based on the following parameters)
        setConfigKeysInDecimal    (if the keys have been specified as decimal rather than hex in the configuration file)